--- a/www/style.css
+++ b/www/style.css
@@ -1,3 +1,11 @@
+html * {
+    font-size: 17px;
+}
+
+h1 {
+    font-size: 30px;
+}
+
 th { 
     text-align: left;
 }
@@ -9,4 +17,9 @@ table, th, td {
 
 th, td {
     padding: 0.2em;
+}
+
+select, input {
+    width: 12em;
+    height: 2em;
 }
