--- a/www/style.css
+++ b/www/style.css
@@ -1,9 +1,17 @@
 html * {
     font-size: 17px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    text-align: center;
 }
 
-h1 {
+h1 > a {
     font-size: 30px;
+}
+
+h2 {
+    font-size: 24px;
 }
 
 th { 
@@ -20,6 +28,18 @@ th, td {
 }
 
 select, input {
-    width: 12em;
+    width: 9em;
     height: 2em;
+}
+
+#test * {
+    font-size: 18px;
+}
+
+#conversions {
+    width: 1000px;
+}
+
+#output {
+    width: 600px;
 }
